After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 732786 - docs: Various fixes for omissions, typos and inconsistencies.
docs: Various fixes for omissions, typos and inconsistencies.
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gstreamer (core)
git master
Other All
: Normal trivial
: 1.3.91
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-07-05 23:02 UTC by Sebastian Rasmussen
Modified: 2014-07-09 07:22 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Proposed patch 1/2. (5.73 KB, patch)
2014-07-05 23:04 UTC, Sebastian Rasmussen
committed Details | Review
Proposed patch 2/2. (8.85 KB, patch)
2014-07-05 23:04 UTC, Sebastian Rasmussen
none Details | Review
Proposed patch 2/2. (10.33 KB, patch)
2014-07-09 06:43 UTC, Sebastian Rasmussen
committed Details | Review

Description Sebastian Rasmussen 2014-07-05 23:02:57 UTC
This patch series fixes various omissions, typos and inconsistencies in the documentation.

The number of unused declarations have been reduced from 92 to 71, none of which contain the 
GST_, Gst or gst_ prefixes and therefore are not really of importance for users of GStreamer.
(Yes, GstSparseFile is still there, but this appears to be a deprecated interface anyway)

Specifically the following warnings below are removed by applying these patches.

gstreamer-sections.txt:3334: warning: No declaration found for gst_device_get_klass.
gstreamer-sections.txt:3348: warning: Double symbol entry for gst_device_create_element. Previous occurrence on line 3331.
gstreamer-sections.txt:3349: warning: Double symbol entry for gst_device_get_caps. Previous occurrence on line 3332.
gstreamer-sections.txt:3350: warning: Double symbol entry for gst_device_get_display_name. Previous occurrence on line 3333.
gstreamer-libs-sections.txt:68: warning: No declaration found for gst_timed_value_control_source_get_base_value_type.
gstreamer-libs-sections.txt:297: warning: No declaration found for gst_base_sink_wait_eos.
gstreamer-libs-sections.txt:310: warning: No declaration found for gst_base_sink_set_last_buffer_enabled.
gstreamer-libs-sections.txt:311: warning: No declaration found for gst_base_sink_is_last_buffer_enabled.
gstreamer-libs-sections.txt:328: warning: No declaration found for GST_BASE_SINK_PREROLL_TIMED_WAIT.
gstreamer-libs-sections.txt:364: warning: No declaration found for gst_base_transform_suggest.
gstreamer-libs-sections.txt:365: warning: No declaration found for gst_base_transform_reconfigure.
gstreamer-libs-sections.txt:728: warning: No declaration found for gst_collect_pads_read.
gstreamer-libs-sections.txt:802: warning: No declaration found for gst_type_find_helper_get_range_ext.
libs/gst/net/gstnetaddressmeta.h:34: warning: Field descriptions for struct GstNetAddressMeta are missing in source code comment block.
libs/gst/check/gstcheck.c:562: warning: Parameter description for gst_check_element_push_buffer_list::caps_in is missing in source code comment block.
libs/gst/check/gstcheck.c:562: warning: Parameter description for gst_check_element_push_buffer_list::caps_out is missing in source code comment block.
libs/gst/check/gstcheck.c:703: warning: Parameter description for gst_check_element_push_buffer::caps_out is missing in source code comment block.
libs/gst/check/gstcheck.c:703: warning: Parameter description for gst_check_element_push_buffer::caps_in is missing in source code comment block.
html/gstreamer-GstDeviceProvider.html:654: warning: no link for: 'GST-MESSAGE-DEVICE:CAPS' -> (GST_MESSAGE_DEVICE).
html/gstreamer-GstValue.html:3105: warning: no link for: 'GstValueList' -> (GstValueList).
html/GstDeviceProviderFactory.html:156: warning: no link for: 'gst-device-provider-factory-create' -> (gst_device_provider_factory_create()).
html/GstDeviceProviderFactory.html:157: warning: no link for: 'gst-device-provider-factory-make' -> (gst_device_provider_factory_make()). 
html/gstreamer-GstDevice.html:123: warning: no link for: 'GstGlobalDeviceMonitor' -> (GstGlobalDeviceMonitor).
html/api-index-full.html:864: warning: no link for: 'gst-buffer-add-net-address-meta' -> (gst_buffer_add_net_address_meta).
html/api-index-full.html:864: warning: no link for: 'gstreamer-libs-GstNetAddressMeta' -> (GstNetAddressMeta).
html/api-index-full.html:868: warning: no link for: 'gst-buffer-get-net-address-meta' -> (gst_buffer_get_net_address_meta).
html/api-index-full.html:2147: warning: no link for: 'gst-net-address-meta-get-info' -> (gst_net_address_meta_get_info).
html/GstTestClock.html:243: warning: no link for: 'gst-test-clock-wait-for-multiple-pending-ids' -> (gst_test_clock_wait_for_multiple_pending_ids())
Comment 1 Sebastian Rasmussen 2014-07-05 23:04:02 UTC
Created attachment 279965 [details] [review]
Proposed patch 1/2.
Comment 2 Sebastian Rasmussen 2014-07-05 23:04:18 UTC
Created attachment 279966 [details] [review]
Proposed patch 2/2.
Comment 3 Sebastian Rasmussen 2014-07-09 06:43:00 UTC
Created attachment 280208 [details] [review]
Proposed patch 2/2.

Found another few typos.
Comment 4 Sebastian Dröge (slomo) 2014-07-09 07:22:49 UTC
commit 863ba1a5985b590b3af4a3a517ee2f0a2ffa65de
Author: Sebastian Rasmussen <sebras@hotmail.com>
Date:   Sat Jul 5 18:29:29 2014 +0200

    docs: Fix documentation typos and inconsistencies
    
     * GstGlobalDeviceMonitor was renamed to GstDeviceMonitor
     * Expand GST_MESSAGE_DEVICE to the full enum value names
     * Correct the incorrect references to the GstDeviceProvider interfaces
     * Describe caps arguments for gstcheck interface
     * Add missing docs for GstNetAddressMeta and its add function
     * Add docs for toc helper macros
     * Avoid refering to GstValueList type as done elsewhere
    
    Fixes https://bugzilla.gnome.org/show_bug.cgi?id=732786

commit 05cd4f89d3ad674223ed4edb85e0ef0f19caa05f
Author: Sebastian Rasmussen <sebras@hotmail.com>
Date:   Sat Jul 5 17:13:21 2014 +0200

    docs: Cleanup interface references in docs
    
     * Delete references to removed interfaces
     * Add missing documentation sections
     * Fix duplicate interface references for GstDevice
    
    Fixes https://bugzilla.gnome.org/show_bug.cgi?id=732786