libs/gst/net/gstnetaddressmeta.c
@@ -91,6 +91,15 @@ gst_net_address_meta_get_info (void)
   return meta_info;
 }
 
+/**
+ * gst_buffer_add_net_address_meta:
+ * @buffer: a #GstBuffer
+ * @addr: a @GSocketAddress to connect to @buffer
+ *
+ * Attaches @addr as metadata in a #GstNetAddressMeta to @buffer.
+ *
+ * Returns: (transfer none): a #GstNetAddressMeta connected to @buffer
+ */
 GstNetAddressMeta *
 gst_buffer_add_net_address_meta (GstBuffer * buffer, GSocketAddress * addr)
 {
